vlib/v/checker/tests/comptime_for.out
vlib/v/checker/tests/comptime_for.vv:2:12: error: unknown type `Huh`
    1 | fn unknown() {
    2 |     $for m in Huh.methods {}
      |               ~~~~~~~~~~~
    3 |     $for f in Huh.fields {}
    4 | }
vlib/v/checker/tests/comptime_for.vv:3:12: error: unknown type `Huh`
    1 | fn unknown() {
    2 |     $for m in Huh.methods {}
    3 |     $for f in Huh.fields {}
      |               ~~~~~~~~~~
    4 | }
