vlib/v/checker/tests/comptime_for.vv
fn unknown() {
	$for m in Huh.methods {}
	$for f in Huh.fields {}
}
